--- a/fe/index.html
+++ b/fe/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    <link href='https://fonts.googleapis.com/css?family=Inter:300,400,700' rel='stylesheet' type='text/css'>
+    <title>Fantasy Football</title>
   </head>
   <body>
     <div id="root"></div>
