--- a/fe/index.html
+++ b/fe/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href='https://fonts.googleapis.com/css?family=Inter:300,400,700' rel='stylesheet' type='text/css'>
-    <title>Fantasy Football</title>
+    <title>🏈 Fantasy Football</title>
   </head>
   <body>
     <div id="root"></div>
